--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My World</title>
+    <title>Food Network</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
         <div class="half-width top-align">
             <h1><span class="orange-color">Skip</span> The Diet,</h1>
             <h1>Just Eat Healthy</h1>
-            <h1>With Food Network</h1>
+            <h1 class="link-area-margin">With Food Network</h1>
             <h3>Imagine you don't need a diet because we provide</h3>
             <h3 class="link-area-margin">healthy and delicious food for
                 you!</h3>
@@ -28,3 +28,49 @@
             <img src="images/Group 8425.png" alt="">
         </div>
     </section>
+    <section class="flexible-area bacground-image">
+        <div class="half-width">
+            <img src="images/Person Image.png" alt="">
+        </div>
+        <div class="half-width top-align">
+            <h2>About Me</h2>
+            <p class="link-area-margin">My name is Sadia Rahman (Asha). Basically I'm a Housewife. Cooking is my
+                passion. When I got free time, I
+                try to cook something new. Now I want to share what I cooked.</p>
+            <a class="link-area" target="_blank" href="https://www.facebook.com/Maruf951">Contact me</a>
+        </div>
+    </section>
+    <section>
+        <div class="my-recipes">
+            <h2>My recipes</h2>
+            <p>Work from your Strength. Don’t try to master everything. Become known for a few dishes, perhaps even the
+                near perfection of one. Discover your obsession, then make yourself a slave to it: the mastery of a
+                traditional dish, the combination of ingredients that have never before met, precision in presentation,
+                devotion to a culinary heritage, the introduction of color where it never before existed.</p>
+        </div>
+        <div class="flexible-area">
+            <div class="recipe-item">
+                <img src="images/chatpoty.png" alt="">
+                <h3>Chotpoty</h3>
+                <p>Nothing can be more popular in Bangladesh than chotpoti!!! Be it winter or summer. dull or bright day
+                    , whether you are in good or bad mood , it is chotpoti and fuchka that makes your day !!</p>
+            </div>
+            <div class="recipe-item">
+                <img src="images/green-salad.png" alt="">
+                <h3>Green Salad</h3>
+                <p>This salad is good for a side dish or a meal on its own. I make it often for my family and they
+                    always enjoy it.</p>
+            </div>
+            <div class="recipe-item">
+                <img src="images/pasta-salad.png" alt="">
+                <h3>Pasta</h3>
+                <p>This rich and flavorful sauce is the perfect match for bitter radicchio. It is incredibly easy to
+                    make and goes well with any type of (preferably fresh) pasta. My favorite pasta to have this with is
+                    gnocchi. The light and fluffy potato pasta goes well with the rich sauce. Garnish with Parmesan
+                    cheese and parsley.</p>
+            </div>
+        </div>
+    </section>
+</body>
+
+</html>
