--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
                 Linkedin</a>
         </div>
         <div class="half-width">
-            <img src="images/Group 8425.png" alt="">
+            <img src="images/asha2.png" alt="">
         </div>
     </section>
     <section class="flexible-area bacground-image">
         <div class="half-width">
-            <img src="images/Person Image.png" alt="">
+            <img src="images/asha.png" alt="">
         </div>
         <div class="half-width top-align">
             <h2>About Me</h2>
@@ -50,27 +50,30 @@
         </div>
         <div class="flexible-area">
             <div class="recipe-item">
-                <img src="images/chatpoty.png" alt="">
+                <img src="images/chotpoti.jpg" alt="">
                 <h3>Chotpoty</h3>
                 <p>Nothing can be more popular in Bangladesh than chotpoti!!! Be it winter or summer. dull or bright day
                     , whether you are in good or bad mood , it is chotpoti and fuchka that makes your day !!</p>
             </div>
             <div class="recipe-item">
-                <img src="images/green-salad.png" alt="">
-                <h3>Green Salad</h3>
-                <p>This salad is good for a side dish or a meal on its own. I make it often for my family and they
-                    always enjoy it.</p>
-            </div>
-            <div class="recipe-item">
-                <img src="images/pasta-salad.png" alt="">
+                <img src="images/pasta.jpg" alt="">
                 <h3>Pasta</h3>
                 <p>This rich and flavorful sauce is the perfect match for bitter radicchio. It is incredibly easy to
                     make and goes well with any type of (preferably fresh) pasta. My favorite pasta to have this with is
                     gnocchi. The light and fluffy potato pasta goes well with the rich sauce. Garnish with Parmesan
                     cheese and parsley.</p>
             </div>
+            <div class="recipe-item">
+                <img src="images/kalojam.jpg" alt="">
+                <h3>Kalojam</h3>
+                <p>Kalo jam’s tast you have to try once in your lifetime. deshi taste always best</p>
+            </div>
         </div>
     </section>
+    <footer>
+        <h2><span class="text-gradient">FOOD</span> NETWOR</h2>
+        <p>Eat healthy to live healthy. Live healthy to live happy</p>
+    </footer>
 </body>
 
 </html>
