bonus section draft

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 </head>
 
 <body>
+    <section class="right-align">
+        <h3 class="top-line"><a href="#about-me">About Me</a></h3>
+        <h3 class="top-line"><a href="#my-recipe">My Recipes</a></h3>
+        <h3 class="top-line"><a href="#footer">Footer</a></h3>
+    </section>
     <section class="flexible-area">
         <div class="half-width top-align">
             <h1><span class="orange-color">Skip</span> The Diet,</h1>
@@ -33,7 +38,7 @@
             <img src="images/asha.png" alt="">
         </div>
         <div class="half-width top-align">
-            <h2>About Me</h2>
+            <h2 id="about-me">About Me</h2>
             <p class="link-area-margin">My name is Sadia Rahman (Asha). Basically I'm a Housewife. Cooking is my
                 passion. When I got free time, I
                 try to cook something new. Now I want to share what I cooked.</p>
@@ -42,7 +47,7 @@
     </section>
     <section>
         <div class="my-recipes">
-            <h2>My recipes</h2>
+            <h2 id="my-recipe">My Recipes</h2>
             <p>Work from your Strength. Don’t try to master everything. Become known for a few dishes, perhaps even the
                 near perfection of one. Discover your obsession, then make yourself a slave to it: the mastery of a
                 traditional dish, the combination of ingredients that have never before met, precision in presentation,
@@ -70,7 +75,7 @@
             </div>
         </div>
     </section>
-    <footer>
+    <footer id="footer">
         <h2><span class="text-gradient">FOOD</span> NETWOR</h2>
         <p>Eat healthy to live healthy. Live healthy to live happy</p>
     </footer>
