--- a/index.html
+++ b/index.html
@@ -63,10 +63,8 @@
             <div class="recipe-item">
                 <img src="images/pasta.jpg" alt="">
                 <h3>Pasta</h3>
-                <p>This rich and flavorful sauce is the perfect match for bitter radicchio. It is incredibly easy to
-                    make and goes well with any type of (preferably fresh) pasta. My favorite pasta to have this with is
-                    gnocchi. The light and fluffy potato pasta goes well with the rich sauce. Garnish with Parmesan
-                    cheese and parsley.</p>
+                <p>My favorite pasta to have this with is gnocchi. The light Cheese and pasta goes well with the rich
+                    sauce. Garnish with Parmesan cheese and parsley.</p>
             </div>
             <div class="recipe-item">
                 <img src="images/kalojam.jpg" alt="">
